--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 
     width: 98.6vw;
     height: 100vh;
-    background-color: #eeeeee;
+    background-color: #eee;
 }
 
 header{
@@ -16,13 +16,15 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #226CA8;
     
 }
 
 h1{
-    text-shadow: 1px 1px 1px #000 ;
+    text-shadow: 2px 1px 2px #000 ;
     color: #fff;
-    font-size: 60px;
+    font-size: 80px;
+    font-family: 'Lobster', cursive;
 }
 
 #div-input{
